# Webserv

./: .gitignore  CMakeLists.txt  Config.cpp  Config.hpp  Makefile  Server.cpp  Server.hpp  get_page_text.cpp  main.cpp  master.hpp  plan  start.sh  test.sh
App/: CMakeLists.txt  Plan
App/Cgi/: Cgi.cpp  Cgi.h  meta_variables.cpp
App/Client/: Client.hpp
App/Config/: GET  conf  conf_for_tester  conf_wordpress  instruction  many_servers  reg_conf  site_conf
App/Error_page/: 404.html  405.html
App/Headers/: Input_handlers.hpp  Server.hpp  master.hpp  shared.hpp
App/Html/: 404.html  autoindex.html  index1.html  index2.html  index3.html
App/Html/html/: index2.html
App/Html/html/ttt/: index3.html
App/MIME&ERROR_CODE/: MIME_ERROR.cpp  MIME_ERROR.hpp  error_types
App/MIME_types/: MIME.cpp  MIME.hpp  mime_types
App/Main/: Color.hpp  main.cpp  master.hpp  utils.cpp
App/Metods/: Autoindex_generate.cpp  Select_metod.cpp
App/Metods/GET/: GET.cpp  GET.hpp
App/Metods/HEAD/: HEAD.cpp  HEAD.hpp
App/Metods/POST/: POST.cpp  POST.hpp
App/Metods/PUT/: PUT.cpp  PUT.hpp
App/Metods/Path/: Header.cpp  Path.cpp  Path.hpp
App/Metods/Search_by_configuration/: Header.cpp  Search_by_configuration.cpp  Search_by_configuration.hpp
App/Metods/Search_path(BASE)/: No_member_func.cpp  Path.hpp  Path_to_file.cpp  Path_to_file.hpp
App/MimeType_And_ErrorPageCode/: GetMimeTypeAndErrorPageCode.cpp  GetMimeTypeAndErrorPageCode.hpp  error_types  mime_types
App/Parce_input_handlers/: Parce_input_handler.cpp  Parce_input_handler.hpp
App/Parse_input_handlers/: Parse_input_handler.cpp  Parse_input_handler.hpp
App/Parse_request_headers/: Parse_request_headers.cpp  Parse_request_headers.hpp
App/Parser/: Parser.cpp  Parser.hpp
App/Server/: Server.cpp  Server.hpp  Server_sys_function.cpp
App/Srcs/: Check_input_handler_buffer.cpp  Input_handlers.cpp  Server.cpp  get_page_text.cpp  main.cpp
App/Test/: conf  conf_for_tester  main.cpp
Cgi/: CMakeLists.txt  Cgi.cpp  Cgi.h  meta_variables.cpp
Config/: CMakeLists.txt  Config.hpp  Config_handler.cpp  conf  main.cpp
Config/Headers/: Config.hpp
Config/Srcs/: Autoindex_generate.cpp  Check_allow_metods.cpp  Config_handler.cpp  Config_parser.cpp
Config/Test/: conf  main.cpp
Html/: index1.html  index3.html
Html/abs/adasdas/: adasdsa
Parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
Parser/Test/: conf  main.cpp
Tester/: Instruction
Tester/site/: auth.html  index.html  p2.html  p3.html
parser/: CMakeLists.txt  Config.cpp  Config.hpp  Makefile  conf  directives.cpp  get_page_text.cpp  main.cpp  oldConfig.cpp  oldConfig.hpp  parse.cpp  plan  utils.cpp
